# quant-copilot

./: .gitignore  README.md
backend/: README.md  requirements.txt
backend/app/: main.py
backend/tests/: test_assumptions.py  test_bond_cashflows.py  test_bond_price.py  test_bond_risk.py  test_bond_ytm.py  test_curve_endpoint.py  test_equity_option_price.py  test_extract.py  test_fra_price.py  test_fx_forward_price.py  test_fx_option_price.py  test_fx_swap_price.py  test_health.py  test_irs_breakdown.py  (+16 more)
quant-core/: README.md  pyproject.toml
quant-core/quant_core/: __init__.py
quant-core/quant_core.egg-info/: PKG-INFO  SOURCES.txt
quant-core/quant_core/conventions/: __init__.py  business_day.py  calendar.py  day_count.py  schedule.py
quant-core/quant_core/curves/: bootstrap_swap.py  discount_curve.py
quant-core/quant_core/instruments/: equity_option.py  fx_option.py
quant-core/quant_core/pricing/: __init__.py  bond_pricer.py  equity_option_pricer.py  fx_forward_pricer.py  fx_option_pricer.py  portfolio.py
quant-core/quant_core/risk/: scenario.py
quant-core/quant_core/utils/: __init__.py  date_utils.py
quant-core/tests/: __init__.py  test_bond_pricer.py  test_bond_risk.py  test_bootstrap_mixed.py  test_bootstrap_swap.py  test_conventions.py  test_curves.py  test_equity_option_pricer.py  test_fra_pricer.py  test_fx_forward_pricer.py  test_fx_option_pricer.py  test_fx_swap_pricer.py  test_irs_pricer.py  test_market_inputs.py  test_portfolio_aggregation.py  test_risk_ladder.py  test_risk_scenario.py
streamlit-app/: README.md  app.py  requirements.txt
(+33 files in other folders)
