[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-core"
version = "0.1.0"
description = "Quant Copilot V2 quantitative engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["quant_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
